--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -11,7 +11,10 @@
             android:id="@+id/nav_food"
             android:icon="@drawable/ic_restaurant"
             android:title="Comida Favorita" />
+        <item
+            android:id="@+id/nav_lista_musicas"
+            android:icon="@drawable/ic_queue_music"
+            android:title="Lista de músicas" />
     </group>
-
 
 </menu>
